# legrad

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  pyproject.toml
legrad/: CMakeLists.txt
legrad/backend/cpu/: CMakeLists.txt  fill_data.cpp  fill_data.h
legrad/core/: allocator.cpp  allocator.h  allocator_mgr.h  buffer.cpp  buffer.h  device.cpp  device.h  dtype.cpp  dtype.h
legrad/internal/: array_view.h  instrusive_ptr.h  view_pack.cpp  view_pack.h
legrad/macros/: expr.h  log.h
legrad/tensor/: tensor_base.h  tensor_view.cpp  tensor_view.h
legrad/tests/: CMakeLists.txt
legrad/tests/internal/: array_view.cpp  view_pack.cpp
legrad/tests/tensor/: tensor_view.cpp
legrad/util/: hash_key.h  helper_func.h
